# pictl

./: .gitignore  AGENTS.md  LICENSE  README.md  api-extractor.json  dprint.json  eslint.config.js  package-lock.json  package.json  treefmt.toml  tsconfig.dts.json  tsconfig.json
docs/: agent-harness-landscape.md  alternatives.md  architecture.md  design-decisions.md  getting-started.md  implementation-plan.md  philosophy.md  pi-modifications.md  pictl.api.md
docs/specs/: auditing-and-attach-tracking.md  (+27 more)
extensions/: navigate-tree.test.ts  navigate-tree.ts
rust/: Cargo.toml
rust/pictl-rs/: Cargo.toml
rust/pictl-rs/examples/: attach.rs
rust/pictl-rs/src/: agent_id.rs  agent_probe.rs  connect_with_retry.rs  error.rs  lib.rs
rust/pictl-rs/src/activity_watcher/: mod.rs  tests.rs
rust/pictl-rs/src/attach_pane/: mod.rs  tests.rs
rust/pictl-rs/src/frame_codec/: mod.rs  tests.rs
rust/pictl-rs/src/pi_socket_client/: mod.rs  tests.rs
rust/pictl-rs/src/pictl/: mod.rs  tests.rs
rust/pictl-rs/src/socket_record/: mod.rs  tests.rs
rust/pictl-rs/src/tty_client/: mod.rs  tests.rs
rust/pictl-rs/tests/: integration.rs
scripts/: pictl-render  setup-worktree.sh  verify-before-publish.sh
src/: ansi.ts  app.ts  attach.ts  cli.test.ts  cli.ts  completion.ts  daemon.test.ts  daemon.ts  holder.test.ts  holder.ts  inspect.ts  lifecycle.ts  main.ts  pi-socket-client.ts  registry.test.ts  registry.ts  rpc-commands.ts  rpc.ts  spawn.ts  streaming.ts  tail.ts  tty-protocol.test.ts  tty-protocol.ts  tty-server.test.ts  tty-server.ts  util.ts  version.ts  wait.ts
(+126 files in other folders)
